better subscribing with .on()

--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,7 @@
 		<title>ToDo with DDS</title>
 		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" href="demo.css">
+		<link rel="stylesheet" href="fonts/fonts.css">
 	</head>
 	<body>
 		<div class="left">
