--- a/demo.html
+++ b/demo.html
@@ -17,6 +17,10 @@
 			</div>
 			
 			<ol class="task-list"></ol>
+
+			<p class="filter-btns"><strong>Filter:</strong> <button class="all">all</button>, <button class="checked">checked</button>, <button class="unchecked">unchecked</button></p>
+
+			<p class="sort-btns"><strong>Sort:</strong> <button class="newFirst">New first</button>, <button class="newLast">New last</button></p>
 		</div>
 
 		<div class="right">
@@ -28,10 +32,15 @@
 			</div>
 			
 			<ol class="task-list"></ol>
+
+			<p class="filter-btns"><strong>Filter:</strong> <button class="all">all</button>, <button class="checked">checked</button>, <button class="unchecked">unchecked</button></p>
+
+			<p class="sort-btns"><strong>Sort:</strong> <button class="newFirst">New first</button>, <button class="newLast">New last</button></p>
 		</div>
 
-		<script src="object-subscribe/obj.js"></script>
+		<script src="bower_components/object-subscribe/obj.js"></script>
 		<script src="DDS.js"></script>
+		<script src="https://cdn.firebase.com/js/client/1.0.15/firebase.js"></script>
 		<script src="demo.js"></script>
 	</body>
 </html>
