AMD, subscribable.js, DDS.Renderer
Add AMD exporting
Use subscribable.js for events
Make DDS.DOMRenderer extend a base DDS.Renderer Constructor

--- a/demo.html
+++ b/demo.html
@@ -39,6 +39,7 @@
 		</div>
 
 		<script src="bower_components/object-subscribe/obj.js"></script>
+		<script src="bower_components/subscribable.js/subscribable.js"></script>
 		<script src="DDS.js"></script>
 		<script src="https://cdn.firebase.com/js/client/1.0.15/firebase.js"></script>
 		<script src="demo.js"></script>
