cache view models, Demo: Fix sort, fix fb sync

--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
 		<div class="left">
 			<div class="toolbar">
 				<form class="new-task-form">
-					<input type="text" class="task-name-field" placeholder="e.g. Walk the dog" x-webkit-speech>
+					<input type="text" class="task-name-field" placeholder="e.g. Walk the dog">
 					<button><span class="icon">+</span><span class="icon-text">Add</span></button>
 				</form>
 			</div>
@@ -26,7 +26,7 @@
 		<div class="right">
 			<div class="toolbar">
 				<form class="new-task-form">
-					<input type="text" class="task-name-field" placeholder="e.g. Walk the dog" x-webkit-speech>
+					<input type="text" class="task-name-field" placeholder="e.g. Walk the dog">
 					<button><span class="icon">+</span><span class="icon-text">Add</span></button>
 				</form>
 			</div>
