--- a/demos/two view todo list synced with local storage and Firebase/demo.html
+++ b/demos/two view todo list synced with local storage and Firebase/demo.html
@@ -42,6 +42,7 @@
 		<script src="../../bower_components/subscribable.js/subscribable.js"></script>
 		<script src="../../DDS.js"></script>
 		<script src="https://cdn.firebase.com/js/client/1.0.15/firebase.js"></script>
+		<script src="helpers.js"></script>
 		<script src="demo.js"></script>
 	</body>
 </html>
